# Control_OpenManipulator

./: VisualControl_msg  manipulator cmd
controller_arm/: CMakeLists.txt  package.xml
controller_arm/include/controller_arm/: kinematics_solver.hpp  maincontroller.hpp  (+1 more)
controller_arm/init/: init
controller_arm/launch/: controller_arm.launch
controller_arm/model/: SamplingArm.urdf  open_manipulator.urdf
controller_arm/src/: kinematics_solver.cpp  maincontroller.cpp  trajectory_planner.cpp
controller_arm_msg/: CMakeLists.txt  package.xml
controller_arm_msg/msg/: GuiControl.msg  Monitor.msg  StateInfo.msg  VisualControl.msg
covid19_communication/covid19_communication_client/: CMakeLists.txt  package.xml
covid19_communication/covid19_communication_server/: CMakeLists.txt  mainpage.dox  package.xml
covid19_communication/covid19_communication_server/include/covid19_communication_server/: main_window.hpp  qnode.hpp
covid19_communication/covid19_communication_server/src/: main.cpp  main_window.cpp  qnode.cpp
covid19_communication/covid19_communication_server/ui/: main_window.ui
gui_controller_arm/: CMakeLists.txt  mainpage.dox  package.xml
gui_controller_arm/src/: main.cpp  main_window.cpp  qnode.cpp
gui_controller_arm/ui/: main_window.ui
open_manipulator_description/rviz/: open_manipulator.rviz
open_manipulator_description/urdf/: open_manipulator.gazebo.xacro  open_manipulator.urdf.xacro  open_manipulator_zaxis.urdf.xacro
open_manipulator_gazebo/launch/: open_manipulator_controller.launch
open_manipulator_gazebo/worlds/: empty.world
(+10 files in other folders)
